fixed some scrollbar issues

--- a/src/client/src/ui/blotter/views/blotter.scss
+++ b/src/client/src/ui/blotter/views/blotter.scss
@@ -3,7 +3,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  overflow-x: scroll;
+  overflow: hidden;
   font-family: 'Segoe UI', sans-serif;
 
   .fixedDataTableCellLayout_main {
